--- a/Spline/Config/DefaultEngine.ini
+++ b/Spline/Config/DefaultEngine.ini
@@ -15,3 +15,17 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Spline")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SplineGameModeBase")
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=58A28531410B2EDC46E079937F7D055A
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
